# VTE

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  VALIDATION.md  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: validate_structs.yml
css/: style.css
docs/: ARCHITECTURE.md  BUGS.md  GRANITE.md  LEMONADE.md  LIMITATIONS.md  PERFORMANCE.md  QWEN35.md  USAGE.md
js/: gpu.js  main.js  scene.js
kernels/: vector_add.hip
scratch/: test_qwen_helloworld.py  test_qwen_nothinking.py
scripts/diagnostics/: diag_attn_qkv_quant_probe.py  diag_batch_decode_numeric.py  diag_batch_decode_throughput.py  diag_batch_gemv_scaling.py  diag_batch_hipgraph_numeric.py  diag_batch_hipgraph_throughput.py  diag_decode_steps.py  diag_dequant_ref.py  diag_etapaB_graph.py  diag_flash.py  diag_full_l0.py  diag_full_model.py  diag_fused_ffn.py  diag_fused_qkv.py  diag_gemv_coalesced.py  diag_gemv_q4k.py  diag_gemv_q6k.py  diag_gemv_q8_0.py  diag_generate_batch_e2e.py  diag_mag2.py  (+26 more)
tests/: conftest.py  test_codegen.py  test_gguf_parser.py  test_gguf_sanitizer.py  test_hardware_safety.py  test_hip_bridge.py  test_hip_graph.py  test_ir.py  test_isolation.py  test_kernel_fusion.py  test_lifecycle.py  test_qwen_mapper.py  test_slab_allocator.py  test_vram_efficiency.py  test_watchdog.py
tools/: bench_decode_step_breakdown.py  bench_dispatch_vs_gpu_duty.py  bench_e2e_tok_s.py  bench_gemv_q4k_ab_compare.py  bench_gemv_q4k_bandwidth.py  bench_gemv_q6k_ab_compare.py  bench_gemv_q6k_bandwidth.py  bench_lean_decode_step.py  bench_memcpy_safety_scan.py  bench_memcpy_size_scaling.py  bench_outer_loop_breakdown.py  bench_sampler_breakdown.py  bench_sampler_call_overhead.py  bench_topk_e2e_tok_s.py  benchmark_performance.py  debug_embedding_isolated.py  debug_embedding_pipeline.py  debug_layer_0_contributions.py  debug_layer_zeroing.py  debug_rope_and_ffn.py  diagnose_vram_usage.py  test_generation.py  test_model_config.py  test_real_generation.py  validate_all.py  validate_all_layers.py  validate_attention.py  validate_gemv_q6k_header_fix.py  validate_hip_graphs.py  validate_integration.py  validate_kernel_fusion.py  validate_layer_stability.py  validate_matmul.py  validate_rope.py  validate_structs.py  validate_swiglu.py  validate_topk_logits_readback.py  validate_topk_long_context.py  verify_pass1.py  verify_pass2.py
vte/: __init__.py  cli.py  config.py
(+124 files in other folders)
